--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,43 @@
 asgiref==3.5.2
-autopep8==1.7.0
-certifi==2022.9.24
+beautifulsoup4==4.11.1
+black==22.12.0
+certifi==2022.12.7
 charset-normalizer==2.1.1
-cloudinary==1.30.0
-colorama==0.4.5
-crayons==0.4.0
-deprecation==2.1.0
-dj-database-url==1.0.0
-Django==3.2.15
-django-cloudinary-storage==0.3.0
-django-crontab==0.7.1
+click==8.1.3
+colorama==0.4.6
+defusedxml==0.7.1
+diff-match-patch==20200713
+Django==3.2.16
+django-allauth==0.42.0
+django-anymail==7.2.1
+django-bootstrap4==2.2.0
+django-countries==7.5
+django-import-export==3.0.2
+django-thumbs-v2==0.4.1
+et-xmlfile==1.1.0
 gunicorn==20.1.0
 idna==3.4
-img2pdf==0.4.4
-lxml==4.9.1
-numpy==1.23.3
-opencv-python==4.6.0.66
-packaging==21.3
-piexif==1.1.3
-pikepdf==6.2.0
-Pillow==9.2.0
-psycopg2==2.9.4
-pycodestyle==2.9.1
-pyparsing==3.0.9
-python-dotenv==0.21.0
-pytz==2022.2.1
+MarkupPy==1.14
+mypy-extensions==0.4.3
+oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.0.10
+pathspec==0.10.3
+Pillow==9.3.0
+placeholder-pics==1.0.3
+platformdirs==2.6.0
+python3-openid==3.2.0
+pytz==2022.6
+PyYAML==6.0
 requests==2.28.1
+requests-oauthlib==1.3.1
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
-stegano==0.10.2
-toml==0.10.2
-urllib3==1.26.12
-whitenoise==6.2.0
+tablib==3.3.0
+tomli==2.0.1
+typing_extensions==4.4.0
+tzdata==2022.7
+urllib3==1.26.13
+xlrd==2.0.1
+xlwt==1.3.0
